--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center">
     <LinearLayout
+        android:id = "@+id/item_row_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
